# IndustriaMoveleira_backend

./: README.md  pyproject.toml
config/: settings.py  urls.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_alter_order_customer.py  0002_order.py  0002_remove_funcionario_codigo_and_more.py  0003_product.py  0004_productionorder.py  0005_stock.py  0006_ordereditem.py
core/models/: __init__.py  customer.py  employee.py  order.py  orderedItem.py  product.py  production_order.py  rawMaterial.py  stock.py
core/serializers/: __init__.py  customer.py  employee.py  order.py  orderedItem.py  product.py  production_order.py  rawMaterial.py  stock.py
core/views/: __init__.py  customer.py  employee.py  order.py  orderedItem.py  product.py  production_order.py  rawMaterial.py  stock.py
